<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>it.pagopa.pn</groupId>
		<artifactId>pn-parent</artifactId>
		<version>2.0.0-SNAPSHOT</version>
		<relativePath/>
	</parent>
	<artifactId>pn-logsaver-be</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>pn-logsaver-be</name>
	<description>LogSaver microservice</description>
	<properties>
		<java.version>17</java.version>
    	<jacoco.min.line.cover.ratio>0.01</jacoco.min.line.cover.ratio>
    	<mockito.version>4.6.1</mockito.version>
	</properties>
	<dependencies>
	

		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-web</artifactId>
		</dependency>
		<dependency>
		 	<groupId>org.springframework.boot</groupId>
		 	<artifactId>
		 		spring-boot-configuration-processor
		 	</artifactId>
		 	<optional>true</optional>
		 </dependency>
		<dependency>
		    <groupId>com.google.code.findbugs</groupId>
		    <artifactId>jsr305</artifactId>
		    <version>3.0.2</version>
		    <scope>compile</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

	    
		<!-- https://mvnrepository.com/artifact/io.swagger/swagger-annotations -->
		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>1.6.5</version>
		</dependency>

		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>s3</artifactId>
		</dependency>
	
		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/dynamodb-enhanced -->
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>dynamodb-enhanced</artifactId>
			<version>2.17.155</version>
		</dependency>
		<!--  <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-sts</artifactId>
        </dependency> -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.google.code.gson</groupId>
		    <artifactId>gson</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>31.1-jre</version>
		</dependency>
				
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.11.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-collections4</artifactId>
		    <version>4.4</version>
		</dependency>
		<dependency>
		  <groupId>com.github.librepdf</groupId>
		  <artifactId>openpdf</artifactId>
		  <version>1.3.30</version>
		</dependency>		
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
		    <groupId>org.mock-server</groupId>
		    <artifactId>mockserver-junit-jupiter-no-dependencies</artifactId>
		    <version>5.14.0</version>
		     <scope>test</scope>   
		</dependency>
		<dependency>
		    <groupId>com.google.jimfs</groupId>
		    <artifactId>jimfs</artifactId>
		    <version>1.1</version>
		     <scope>test</scope>   
		</dependency>
		<dependency>
		      <groupId>org.awaitility</groupId>
		      <artifactId>awaitility</artifactId>
		      <version>4.2.0</version>
		      <scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>5.4.0</version>
				<executions>					
					<execution>
                        <id>generate-client-safe-storage</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <phase>process-resources</phase>
                        <configuration>
                            <inputSpec>${project.basedir}/docs/wsclient/pn-safe-storage/pn-safestorage-v1-api.yaml</inputSpec>
                            <generatorName>java</generatorName>
                            <library>resttemplate</library>
                            <generateApiTests>false</generateApiTests>
                            <generateModelTests>false</generateModelTests>
                            <configOptions>
                                <apiPackage>it.pagopa.pn.logsaver.generated.openapi.clients.safestorage.api</apiPackage>
                                <modelPackage>it.pagopa.pn.logsaver.generated.openapi.clients.safestorage.model</modelPackage>
                                <dateLibrary>java8</dateLibrary>
                                <annotationLibrary>none</annotationLibrary>
                                <documentationProvider>source</documentationProvider>
                                <openApiNullable>false</openApiNullable>
                                <useAbstractionForFiles>true</useAbstractionForFiles>
                                <useBeanValidation>false</useBeanValidation>
                            </configOptions>
                            <modelPackage>${project.groupId}.pn-logsaver.microservice.client.safestorage.v1.dto</modelPackage>
                            <apiPackage>${project.groupId}.pn-logsaver.microservice.client.safestorage.v1.api</apiPackage>
                        </configuration>
                    </execution>
				</executions>
			</plugin>
			
			<plugin>
	            <groupId>org.jacoco</groupId>
	            <artifactId>jacoco-maven-plugin</artifactId>
	            <configuration>
	                <excludes>
	                    <exclude>**/generated/**</exclude>
	                </excludes>
	            </configuration>
        	</plugin>
        	<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <configuration>
			        <runOrder>alphabetical</runOrder>
			    </configuration>
			</plugin>			 		 
		</plugins>
	</build>
</project>